rounded corners on itinerary cover photos

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,9 +14,8 @@
         android:layout_marginStart="30dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/home_intro"
         app:layout_constraintHorizontal_bias="0.733"
-        app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@drawable/search_button"
         android:src="@drawable/magnifyingglass"
