--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="150dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="5dip"
     android:layout_marginRight="5dip"
     android:foreground="?attr/selectableItemBackground"
     app:cardElevation="0dp"
+    app:cardPreventCornerOverlap="false"
     app:cardBackgroundColor="@color/colorOffWhite"
     app:cardCornerRadius="@dimen/roundCorners">
 
@@ -35,18 +36,12 @@
 
         <ImageView
             android:id="@+id/cover_img"
-            android:layout_width="20dp"
-            android:layout_height="match_parent"
+            android:layout_width="fill_parent"
+            android:layout_height="150dp"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
-            android:scaleX="2"
-            android:scaleY="2"
+            android:scaleType="fitXY"
             android:src="@drawable/sceniclookouts" />
 
 
@@ -57,6 +52,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="0dp"
+            android:layout_marginLeft="10dp"
             android:text="text"
             android:fontFamily="@font/manjaribold"
             android:textColor="@color/colorOffWhite"
@@ -86,18 +82,18 @@
             android:layout_height="@dimen/card_icons"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="0dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="5dp"
+
             android:src="@drawable/like" />
 
         <ImageView
             android:id="@+id/bkmark"
             android:layout_width="@dimen/card_icons"
             android:layout_height="@dimen/card_icons"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="0dp"
-            android:layout_marginEnd="0dp"
+            android:layout_alignRight="@+id/like"
+            android:layout_marginTop="5dp"
+
             app:srcCompat="@drawable/ic_bkmark" />
 
 
