--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -11,38 +11,54 @@
         android:layout_height="match_parent"
         android:visibility="visible">
 
-        <Button
-            android:id="@+id/searchButton2"
+<!--        <Button-->
+<!--            android:id="@+id/searchButton2"-->
+<!--            android:layout_width="70dp"-->
+<!--            android:layout_height="48dp"-->
+<!--            android:layout_marginStart="30dp"-->
+<!--            android:layout_marginTop="30dp"-->
+<!--            android:layout_marginEnd="20dp"-->
+<!--            android:text="[drw]"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.733"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+        <ImageButton
+            android:id="@+id/searchButton"
             android:layout_width="70dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="30dp"
-            android:layout_marginEnd="20dp"
-            android:text="[drw]"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="30dp"
             app:layout_constraintHorizontal_bias="0.733"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/tagSearchBar2"
+            android:background="@drawable/search_button"
+            android:src="@drawable/magnifyingglass"
+            />
 
         <EditText
             android:id="@+id/tagSearchBar2"
-            android:layout_width="280dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginStart="41dp"
+            android:layout_marginTop="28dp"
             android:hint="@string/search_hint_home"
             android:queryHint="Ex. family-friendly"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="38dp" />
+            app:layout_constraintRight_toLeftOf="@+id/searchButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/locationSearchBar2"
-            android:layout_width="280dp"
+            android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:hint="Current Location"
             android:queryHint="Current Location"
             android:visibility="visible"
-            app:layout_constraintTop_toTopOf="@+id/tagSearchBar2"
-            tools:layout_editor_absoluteX="38dp"/>
+            app:layout_constraintStart_toStartOf="@+id/tagSearchBar2"
+            app:layout_constraintTop_toTopOf="@+id/tagSearchBar2" />
 
         <TextView
             android:id="@+id/textView7"
@@ -65,5 +81,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.232" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
