--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -80,10 +80,10 @@
             android:id="@+id/like"
             android:layout_width="@dimen/card_icons"
             android:layout_height="@dimen/card_icons"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
+            android:layout_alignBottom="@+id/cover_img"
+            android:layout_alignEnd="@+id/cover_img"
             android:layout_marginRight="7dp"
-            android:layout_marginBottom="5dp"
+            android:layout_marginBottom="15dp"
 
             android:src="@drawable/like" />
 
@@ -97,6 +97,20 @@
             android:layout_marginRight="5dp"
 
             android:src="@drawable/figmabkmkwhite" />
+
+        <TextView
+            android:id="@+id/numLikes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/like"
+            android:layout_alignEnd="@+id/like"
+            android:layout_alignBottom="@+id/cover_img"
+            android:layout_marginLeft="6dp"
+            android:text="100"
+            android:fontFamily="@font/manjaribold"
+            android:textColor="@color/colorOffWhite"
+            android:textSize="14sp"/>
+
 <!--        <ImageView-->
 <!--            android:id="@+id/bkmark"-->
 <!--            android:layout_width="@dimen/card_icons"-->
