tweaking create/review/login pages

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,12 +75,17 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="100dp"
         android:layout_marginEnd="100dp"
+        android:background="@drawable/search_button"
+        android:fontFamily="@font/manjaribold"
+        android:gravity="center"
         android:onClick="login"
+        android:paddingTop="5dp"
+        android:textAllCaps="false"
         android:text="Login"
+        android:textAlignment="center"
         android:textColor="@color/colorOffWhite"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        android:background="@drawable/search_button"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 </androidx.constraintlayout.widget.ConstraintLayout>
