--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -140,8 +140,9 @@
             android:layout_marginTop="44dp"
             android:background="@drawable/rounded_corner_button"
             android:text="Previous Stop"
+            android:textAllCaps="false"
             android:textColor="#F6F6F6"
-            android:drawableLeft="@drawable/bookmark"
+            android:drawableStart="@drawable/lftarrow"
             app:layout_constraintEnd_toStartOf="@+id/addNewStop"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -156,8 +157,9 @@
             android:layout_marginEnd="68dp"
             android:background="@drawable/rounded_corner_button"
             android:text="Next Stop"
+            android:textAllCaps="false"
             android:textColor="#F6F6F6"
-            android:drawableRight="@drawable/bookmark"
+            android:drawableEnd="@drawable/rtarrow"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/viewPreviousStop"
             app:layout_constraintTop_toBottomOf="@+id/photos" />
@@ -170,6 +172,7 @@
             android:layout_marginBottom="32dp"
             android:background="@drawable/rounded_corner_button"
             android:text="Review Itinerary"
+            android:textAllCaps="false"
             android:textColor="#F6F6F6"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
