--- a/app/src/main/res/drawable/rounded_corner_input.xml
+++ b/app/src/main/res/drawable/rounded_corner_input.xml
@@ -2,15 +2,15 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke
         android:width="1dp"
-        android:color="#C4C4C4" />
+        android:color="#DDDDDD" />
 
-    <solid android:color="#C4C4C4" />
+    <solid android:color="#DDDDDD" />
 
     <padding
-        android:left="3dp"
-        android:right="3dp"
-        android:bottom="3dp"
-        android:top="3dp" />
+        android:left="10dp"
+        android:right="10dp"
+        android:bottom="10dp"
+        android:top="10dp" />
 
     <corners android:radius="6dp" />
 </shape>
