--- a/app/src/main/res/layout/fragment_itin.xml
+++ b/app/src/main/res/layout/fragment_itin.xml
@@ -3,16 +3,61 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/layout"
     android:layout_height="match_parent">
 
 
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
+    <ImageButton
+    android:id="@+id/searchButton"
+    android:layout_width="70dp"
+    android:layout_height="30dp"
+    android:layout_marginTop="30dp"
+    android:layout_marginStart="10dp"
+
+    app:layout_constraintStart_toEndOf="@id/tagSearchBar"
+    app:layout_constraintHorizontal_bias="0.733"
+    app:layout_constraintTop_toTopOf="parent"
+    android:background="@drawable/search_button"
+    android:src="@drawable/magnifyingglass"
+    />
+
+    <Button
+        android:id="@+id/filter"
+        android:layout_width="70dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginStart="10dp"
+        android:text="Filter"
+        android:textColor="@color/colorOffWhite"
+        app:layout_constraintStart_toEndOf="@id/tagSearchBar"
+        app:layout_constraintHorizontal_bias="0.733"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/search_button"
+        />
+
+    <EditText
+        android:id="@+id/tagSearchBar"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="hey this displays itins"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="41dp"
+        android:layout_marginTop="28dp"
+        android:hint="@string/search_hint_home"
+        android:queryHint="Ex. family-friendly"
+        app:layout_constraintRight_toLeftOf="@id/searchButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="140dp"
+        android:fontFamily="@font/manjaribold"
+        android:text="Exploring Bangkok, Thailand"
+        android:textColor="@color/colorGreenDark"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="@id/tagSearchBar"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
