--- a/app/src/main/res/layout/fragment_itin.xml
+++ b/app/src/main/res/layout/fragment_itin.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/search_intro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="140dp"
@@ -59,5 +59,16 @@
         app:layout_constraintStart_toStartOf="@id/tagSearchBar"
         app:layout_constraintTop_toTopOf="parent"
         />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/search_itins"
+        android:layout_width="350dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.476"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/search_intro" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
