--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -32,13 +32,13 @@
             android:layout_marginEnd="30dp"
             app:layout_constraintHorizontal_bias="0.733"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/tagSearchBar2"
+            app:layout_constraintStart_toEndOf="@+id/tagSearchBar"
             android:background="@drawable/search_button"
             android:src="@drawable/magnifyingglass"
             />
 
         <EditText
-            android:id="@+id/tagSearchBar2"
+            android:id="@+id/tagSearchBar"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="41dp"
@@ -50,15 +50,15 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/locationSearchBar2"
+            android:id="@+id/locationSearchBar"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="60dp"
             android:hint="Current Location"
             android:queryHint="Current Location"
             android:visibility="visible"
-            app:layout_constraintStart_toStartOf="@+id/tagSearchBar2"
-            app:layout_constraintTop_toTopOf="@+id/tagSearchBar2" />
+            app:layout_constraintStart_toStartOf="@+id/tagSearchBar"
+            app:layout_constraintTop_toTopOf="@+id/tagSearchBar" />
 
         <Button
             android:id="@+id/temp"
