--- a/app/src/main/res/layout/itinerary_card.xml
+++ b/app/src/main/res/layout/itinerary_card.xml
@@ -14,8 +14,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:padding="5dip">
+        android:orientation="horizontal">
 
 <!--        <ImageView-->
 <!--            android:id="@+id/cover_img"-->
