renamed and cleaned some stuff around the nav controller. preparing to make the child nav fragment of home.

--- a/app/src/main/res/layout/card_itinerary.xml
+++ b/app/src/main/res/layout/card_itinerary.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dip"
     android:layout_marginRight="5dip"
+    android:layout_marginBottom="5dip"
     android:foreground="?attr/selectableItemBackground"
     app:cardElevation="0dp"
     app:cardPreventCornerOverlap="false"
