stylistic changes for keeping colors blue consistent

--- a/app/src/main/res/layout/fragment_itin.xml
+++ b/app/src/main/res/layout/fragment_itin.xml
@@ -25,16 +25,17 @@
         android:id="@+id/filter"
         android:layout_width="70dp"
         android:layout_height="30dp"
-        android:layout_marginTop="90dp"
         android:layout_marginStart="10dp"
-        android:text="Filter"
-        android:textColor="@color/colorOffWhite"
-        android:textAllCaps="false"
-        app:layout_constraintStart_toEndOf="@id/tagSearchBar"
-        app:layout_constraintHorizontal_bias="0.733"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="90dp"
         android:background="@drawable/search_button"
-        />
+        android:fontFamily="@font/manjaribold"
+        android:text="Filter"
+        android:textAllCaps="false"
+        android:textColor="@color/colorOffWhite"
+        android:textSize="16sp"
+        android:paddingTop="5dp"
+        app:layout_constraintStart_toEndOf="@id/tagSearchBar"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/tagSearchBar"
@@ -55,7 +56,7 @@
         android:layout_marginTop="140dp"
         android:fontFamily="@font/manjaribold"
         android:text="Exploring Bangkok, Thailand"
-        android:textColor="@color/colorGreenDark"
+        android:textColor="@color/colorBlueDark"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="@id/tagSearchBar"
         app:layout_constraintTop_toTopOf="parent"
