--- a/app/src/main/res/layout/fragment_filter.xml
+++ b/app/src/main/res/layout/fragment_filter.xml
@@ -70,7 +70,7 @@
             android:fontFamily="@font/manjaribold"
             android:text="Filters"
             android:textAlignment="center"
-            android:textSize="19sp"
+            android:textSize="24sp"
             android:textColor="#194FA2"
             app:layout_constraintEnd_toStartOf="@+id/reset"
             app:layout_constraintStart_toEndOf="@+id/cancel"
@@ -175,64 +175,64 @@
 
         <TextView
             android:id="@+id/price1"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="48dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginStart="55dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/rounded_corner_price"
             android:fontFamily="@font/manjaribold"
             android:text="Free"
             android:textAlignment="center"
-            android:textSize="15sp"
             android:textColor="#828181"
+            android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/price2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/price" />
 
         <TextView
             android:id="@+id/price2"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/rounded_corner_price"
             android:fontFamily="@font/manjaribold"
             android:text="$"
             android:textAlignment="center"
-            android:textSize="15sp"
             android:textColor="#828181"
+            android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/price3"
             app:layout_constraintStart_toEndOf="@+id/price1"
             app:layout_constraintTop_toBottomOf="@+id/price" />
 
         <TextView
             android:id="@+id/price3"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="15dp"
             android:background="@drawable/rounded_corner_price"
             android:fontFamily="@font/manjaribold"
             android:text="$$"
             android:textAlignment="center"
-            android:textSize="15sp"
             android:textColor="#828181"
+            android:textSize="15sp"
             app:layout_constraintEnd_toStartOf="@+id/price4"
             app:layout_constraintStart_toEndOf="@+id/price2"
             app:layout_constraintTop_toBottomOf="@+id/price" />
 
         <TextView
             android:id="@+id/price4"
-            android:layout_width="wrap_content"
+            android:layout_width="64dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="25dp"
-            android:layout_marginEnd="52dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="48dp"
             android:background="@drawable/rounded_corner_price"
             android:fontFamily="@font/manjaribold"
             android:text="$$$"
             android:textAlignment="center"
-            android:textSize="15sp"
             android:textColor="#828181"
+            android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/price3"
             app:layout_constraintTop_toBottomOf="@+id/price" />
