--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -78,7 +78,7 @@
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/manjaribold"
         android:text="@string/home_intro"
-        android:textColor="@color/colorGreenLight"
+        android:textColor="@color/colorBlueDark"
         android:textSize="@dimen/fun_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.476"
