--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">@color/colorGreen</color>
-    <color name="colorPrimaryDark">@color/colorGreenDark</color>
+    <color name="colorPrimary">@color/colorBlueDark</color>
+    <color name="colorPrimaryDark">#0A1553</color>
     <color name="colorAccent">@color/colorTealLight</color>
     <color name="colorAccentDark">@color/colorTeal</color>
 
@@ -13,6 +13,7 @@
     <color name="colorTealLight">#00B8C4</color>
     <color name="colorTeal">#018C9B</color>
     <color name="colorBlueLight">#D3E3F1</color>
+    <color name="colorBlueMedium">#3B88CC</color>
     <color name="colorBlue">#184FA2</color>
     <color name="colorBlueDark">#1C2974</color>
     <color name="colorOffWhite">#F6F6F6</color>
