finished general layout

--- a/app/src/main/res/layout/fragment_posted.xml
+++ b/app/src/main/res/layout/fragment_posted.xml
@@ -16,8 +16,15 @@
         android:text="@string/posted_intro"
         android:textColor="@color/colorFunText"
         android:textSize="@dimen/fun_text"/>
+
     <SearchView
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <fragment
+        android:id="@+id/display_posted_itins"
+        android:name="cs160.final_proj_drawer.ui.itin.DisplayMultItinsFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
