--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,9 +25,9 @@
             android:icon="@drawable/ic_menu_posted"
             android:title="@string/menu_posted" />
         <item
-            android:id="@+id/nav_tools"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
-            android:title="@string/menu_tools" />
+            android:title="@string/menu_settings" />
             -
     </group>
 
