finished settings page gneral stuff (just needs some sprucing)

--- a/app/src/main/res/drawable/rounded_corner_add_photo.xml
+++ b/app/src/main/res/drawable/rounded_corner_add_photo.xml
@@ -4,7 +4,7 @@
         android:width="1dp"
         android:color="#C4C4C4" />
 
-    <solid android:color="#F6F6F6" />
+    <solid android:color="@color/colorButton" />
 
     <padding
         android:left="10dp"
