--- a/app/src/main/res/drawable/rounded_corner_button.xml
+++ b/app/src/main/res/drawable/rounded_corner_button.xml
@@ -4,7 +4,7 @@
         android:width="1dp"
         android:color="#3B88CC" />
 
-    <solid android:color="#3B88CC" />
+    <solid android:color="@color/colorButton" />
 
     <padding
         android:left="10dp"
