--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,7 +14,10 @@
     <dimen name="fun_text">24sp</dimen>
     <dimen name="fun_text_box_height">30sp</dimen>
 
+    <!--padding, margins and formatting-->
     <dimen name="roundCorners">9dp</dimen>
     <dimen name="catPaddingRight">9dp</dimen>
+
+    <dimen name="marginSettingsColorSwatches">10dp</dimen>
 
 </resources>
