--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,7 +24,7 @@
             android:id="@+id/profile_name"
             android:layout_width="200dp"
             android:layout_height="@dimen/fun_text_box_height"
-            android:layout_marginStart="16dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:text="@string/profile_name"
             android:textSize="@dimen/fun_text"
             android:textColor="@color/colorFunText"
@@ -50,5 +50,30 @@
         android:layout_height="wrap_content"
         android:text="@string/profile_bio"
         android:fontFamily="@font/primary" />
+
+    <TextView
+        android:id="@+id/profile_saved_intro"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/fun_text_box_height"
+        android:text="@string/saved_intro"
+        android:textSize="@dimen/fun_text"
+        android:textColor="@color/colorFunText"
+        android:fontFamily="@font/primary" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/profile_posted"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/recyclerHorizHeight"
+        android:orientation="horizontal"/>
+
+    <TextView
+        android:id="@+id/profile_posted_intro"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/fun_text_box_height"
+        android:text="@string/posted_intro"
+        android:textSize="@dimen/fun_text"
+        android:textColor="@color/colorFunText"
+        android:fontFamily="@font/primary"/>
+
 
 </LinearLayout>
