--- a/app/src/main/res/layout/fragment_splash.xml
+++ b/app/src/main/res/layout/fragment_splash.xml
@@ -1,49 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:id="@+id/layout"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_cats"
-        android:layout_width="361dp"
-        android:layout_height="99dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tagSearchBar" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_itins"
-        android:layout_width="350dp"
-        android:layout_height="350dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/home_intro" />
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/recyclerHorizHeight"
+        android:orientation="horizontal"/>
 
     <TextView
         android:id="@+id/home_intro"
-        android:layout_width="350dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="20dp"
-        android:fontFamily="@font/manjaribold"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/fun_text_box_height"
+        android:fontFamily="@font/primary"
         android:text="@string/home_intro"
-        android:textColor="@color/colorGreenLight"
+        android:textColor="@color/colorFunText"
         android:textSize="@dimen/fun_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.476"
-        app:layout_constraintStart_toStartOf="@+id/home_itins"
-        app:layout_constraintTop_toBottomOf="@+id/home_cats" />
+        android:layout_margin="@dimen/activity_horizontal_margin"
+       />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_itins"
+        android:layout_width="wrap_content"
+        android:layout_height="350dp"
+        android:orientation="vertical"
+        />
+
+    </LinearLayout>
